Only part 1, fixed part 1. tried part 2.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Part2"
+            android:exported="true" />
+        <activity
             android:name=".CheatActivity"
             android:exported="true" />
         <activity android:name=".MainActivity">
